# telegram-video-transcription

./: .dockerignore  .env.example  .gitignore  .vercelignore  ANALYTICS_GUIDE.md  DIAGRAM_SERVICE_FIX.md  DIAGRAM_TROUBLESHOOTING.md  Dockerfile  METRICS_GUIDE.md  Makefile  README.md  SPEAKER_NAME_DISAMBIGUATION.md  TRANSCRIPT_QUESTION_FEATURE.md  analytics.py  docker-compose.yml  env_template.txt  main.py  pyproject.toml  vercel.json
.claude/: settings.local.json
docs/: rag-indexing-prd.md
docs/zoom-integration/: PRD.md  todo.md
scripts/: metrics_dashboard.py  nginx-zoom-backend-ssl.conf  nginx-zoom-backend.conf  setup-dev.sh  setup_chrome.sh  setup_mermaid.sh  test_diagram_integration.py  test_mermaid.py  test_metrics.py  web_dashboard.py  zoom-backend.service
src/telegram_bot/: bot.py  main.py  mtproto_downloader.py  services.py
telegram_bot/: __init__.py  bot.py  config.py  main.py  mtproto_downloader.py  services.py  speaker_identification_service.py  summarization_service.py  transcription_service.py
telegram_bot/services/: __init__.py  ai_model.py  analytics_service.py  diagram_data_extractor.py  diagram_service.py  file_service.py  gemini_embedding.py  media_info_service.py  metrics_service.py  python_diagram_generator.py  question_answering_service.py  rag_indexing_service.py  rag_intent_parser.py  rag_query_service.py  rag_storage_service.py  speaker_identification_service.py  summarization_service.py  transcription_service.py  zoom_download_service.py
tests/: __init__.py  test_ai_model.py  test_config.py  test_services.py  test_speaker_identification.py  test_summarization_service.py
website/: index.html  main.js  package-lock.json  package.json  privacy.html  styles.css  support.html  terms.html  vite.config.js
zoom_backend/: __init__.py  app.py  db.py
